--- a/library.properties
+++ b/library.properties
@@ -1,10 +1,10 @@
 name=Bluepad32
-version=0.99.0
+version=0.99.1
 author=Ricardo Quesada
 maintainer=Ricardo Quesada <ricardoquesada@gmail.com>
 sentence=Enables gamepad support for NINA-based boards like Nano RP2040 Connect, Nano 33 IoT, etc.
 paragraph=With this library you can use any Bluetooth gamepad like DualSense, DualShock4, Nintendo Switch, Android gamepads, Xbox One S, etc.
 category=Communication
-url=http://gitlab.com/ricardoquesada/arduino_bluepad32
+url=http://gitlab.com/ricardoquesada/bluepad32-arduino
 architectures=*
-includes=BP32.h
+includes=Bluepad32.h
