library.properties: add more supported boards
Add more supported boards in the "sentence" field.
It seems that we cannot restrict certain boards in architecture.

So we just add the supported ones in "setence"

--- a/library.properties
+++ b/library.properties
@@ -2,7 +2,7 @@ name=Bluepad32
 version=0.99.2
 author=Ricardo Quesada
 maintainer=Ricardo Quesada <ricardoquesada@gmail.com>
-sentence=Enables gamepad support for NINA-based boards like Nano RP2040 Connect, Nano 33 IoT, etc.
+sentence=Enables gamepad support for NINA-based boards like the Nano RP2040 Connect, MKR WiFi 1010, MKR VIDOR 4000, UNO WiFi Rev.2 and Nano 33 IoT.
 paragraph=With this library you can use any Bluetooth gamepad like DualSense, DualShock4, Nintendo Switch, Android gamepads, Xbox One S, etc.
 category=Communication
 url=http://gitlab.com/ricardoquesada/bluepad32-arduino
