Back to original name

--- a/library.properties
+++ b/library.properties
@@ -1,4 +1,4 @@
-name=Bluepad32 for NINA
+name=Bluepad32
 version=1.3.2
 author=Ricardo Quesada
 maintainer=Ricardo Quesada <ricardoquesada@gmail.com>
